Fixed #865 (Yellow 'new' unreadable status)

--- a/site/engine_public/css/xsm.css
+++ b/site/engine_public/css/xsm.css
@@ -154,7 +154,7 @@ span.anketa-status {
 }
 
 span.anketa-status.new {
-    color: #ffff00;
+    color: #cf8f00;
 }
 
 span.anketa-status.progress {
